--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <header class="header">
     <div class="container">
       <div class="logo">
-        <img src="Logo.png" alt="Logo">
+        <img src="assets/images/Logo.png" alt="Logo">
       </div>
       <nav class="menu">
         <ul class="menu-list">
