change paths to images

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <header class="header">
     <div class="container">
       <div class="logo">
-        <img src="./assets/images/Logo.png" alt="Logo">
+        <img src="assets/images/Logo.png" alt="Logo">
       </div>
       <nav class="menu">
         <ul class="menu-list">
@@ -33,7 +33,7 @@
           <button class="button" id="main-action-button" (click)="scrollTo(products)">Смотреть меню</button>
         </div>
       </div>
-      <img src="./assets/images/main_burger.png" alt="Big Burger" class="main-image">
+      <img src="assets/images/main_burger.png" alt="Big Burger" class="main-image">
     </div>
   </section>
 </section>
@@ -42,7 +42,7 @@
     <div class="why-title common-title">почему нас выбирают?</div>
     <div class="why-items">
       <div class="why-item">
-        <img src="./assets/images/burger.png" alt="burger" class="why-item-image">
+        <img src="assets/images/burger.png" alt="burger" class="why-item-image">
         <div class="why-item-title">Авторские рецепты</div>
         <div class="why-item-text">Наши бургеры обладают уникальным сочетанием вкусов и не похожи ни на какие
           другие. Мы тщательно
@@ -50,14 +50,14 @@
         </div>
       </div>
       <div class="why-item">
-        <img src="./assets/images/meat.png" alt="meat" class="why-item-image">
+        <img src="assets/images/meat.png" alt="meat" class="why-item-image">
         <div class="why-item-title">Мраморная говядина</div>
         <div class="why-item-text">Для наших бургеров мы используем отборную 100% мраморную говядину, которую
           закупаем исключительно у фермеров. Мы уверены в качестве нашего мяса.
         </div>
       </div>
       <div class="why-item">
-        <img src="./assets/images/truck.png" alt="truck" class="why-item-image">
+        <img src="assets/images/truck.png" alt="truck" class="why-item-image">
         <div class="why-item-title">Быстрая доставка</div>
         <div class="why-item-text">Мы доставляем в пределах МКАД за 30 минут, а если не успеем — доставка
           бесплатно. Мы тщательно упаковываем наши бургеры, чтобы по дороге они не остыли.
@@ -103,7 +103,7 @@
 <section class="order" id="order" #order>
   <div class="container">
     <div class="order-title common-title">оформление заказа</div>
-    <img src="./assets/images/order_image.png" alt="Burger in the box" class="order-image">
+    <img src="assets/images/order_image.png" alt="Burger in the box" class="order-image">
     <div class="order-form">
       <div class="order-form-text">
         Заполните все данные и наш менеджер свяжется с вами для подтверждения заказа
@@ -126,7 +126,7 @@
 <footer class="footer">
   <div class="container">
     <div class="logo">
-      <img src="./assets/images/Logo.png" alt="Logo">
+      <img src="assets/images/Logo.png" alt="Logo">
     </div>
     <div class="rights">Все права защищены</div>
   </div>
