--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
       <div class="logo">
         <img src="assets/images/Logo.png" alt="Logo">
       </div>
+     
       <nav class="menu">
         <ul class="menu-list">
           <li class="menu-item">
@@ -18,6 +19,26 @@
         </ul>
       </nav>
       <div class="currency" title="Изменить валюту" id="change-currency" (click)="changeCurrency()">{{currency}}</div>
+
+      <div class="mobile-menu">
+        <div class="currency-burger" title="Изменить валюту" id="change-currency" (click)="changeCurrency()">{{currency}}</div>
+        <input type="checkbox" id="burger-checkbox" class="burger-checkbox">
+      <label for="burger-checkbox" class="burger"></label>
+      <nav class="burger-menu">
+        <ul class="menu-list">
+          <li class="menu-item">
+            <a (click)="scrollTo(why)">Почему у нас</a>
+          </li>
+          <li class="menu-item">
+            <a (click)="scrollTo(products)">Меню бургеров</a>
+          </li>
+          <li class="menu-item">
+            <a (click)="scrollTo(order)">Оформление заказа</a>
+          </li>
+        </ul>
+      </nav>
+      </div>
+      
     </div>
   </header>
   <section class="main-content">
